--- a/DAD.Web/Views/Home/About.cshtml
+++ b/DAD.Web/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
+<iframe width="100%" height="100%" src="https://app.powerbi.com/groups/me/reports/f6da5099-c38f-4103-9123-074b409002f0/ReportSection"></iframe>
