Mejora de Vista de power bi

--- a/DAD.Web/Views/Home/About.cshtml
+++ b/DAD.Web/Views/Home/About.cshtml
@@ -5,4 +5,4 @@
 <h3>@ViewBag.Message</h3>
 
 <p>Use this area to provide additional information.</p>
-<iframe width="100%" height="100%" src="https://app.powerbi.com/groups/me/reports/f6da5099-c38f-4103-9123-074b409002f0/ReportSection"></iframe>
+<iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=73b83aa8-5ea0-4f3a-bf41-36c3d7469c62&autoAuth=true&ctid=717b9a79-1b91-41ab-a6f7-a579b46a9b41&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
