--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -102,7 +102,7 @@
             </tbody>
         </table>
 
-        <div class="row d-flex justify-content-around">
+        @*<div class="row d-flex justify-content-around">
 
             <a href="#" class="btn btn-primary">Dimensión tangibilidad</a>
 
@@ -119,6 +119,6 @@
             <a href="#" class="btn btn-primary">Filtro por año de ingreso</a>
 
 
-        </div>
+        </div>*@
     </div>
 
