--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 
     }
     <br />
-    <table class="table table-bordered">
+    <table class="table table-bordered" id="table">
         <thead class="thead-dark">
             <tr>
                 <th>
@@ -125,3 +125,14 @@
 </div>
 
 <iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=73b83aa8-5ea0-4f3a-bf41-36c3d7469c62&autoAuth=true&ctid=717b9a79-1b91-41ab-a6f7-a579b46a9b41&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
+@section scripts{
+    <script>
+
+        $(document).ready(function () {
+            $('#table').DataTable();
+        });
+    </script>
+    
+    
+    
+    }
