Acabdo de insert de api excel a base de datos

--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -102,11 +102,9 @@
         </tbody>
     </table>
 
-    @*<div class="row d-flex justify-content-around">
-
-            <a href="#" class="btn btn-primary">Dimensión tangibilidad</a>
-
-            <a href="#" class="btn btn-primary">Dimensión empatia</a>
+    <div class="row d-flex justify-content-end">
+            <a href="#" class="btn btn-primary">Actualizar Base de Datos</a>
+            @*<a href="#" class="btn btn-primary">Dimensión empatia</a>
 
             <a href="#" class="btn btn-primary">Dimensión capacidad de respuesta</a>
 
@@ -116,10 +114,10 @@
 
             <a href="#" class="btn btn-primary">Filtro por sexo</a>
 
-            <a href="#" class="btn btn-primary">Filtro por año de ingreso</a>
+            <a href="#" class="btn btn-primary">Filtro por año de ingreso</a>*@
 
 
-        </div>*@
+    </div>
 <br />
 <br />
 </div>
