--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -5,124 +5,130 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
+    <div class="container">
 
-    <h1>PROYECTO DAD FINAL</h1>
-    @using (Html.BeginForm("Index", "Home", FormMethod.Post))
-    {
-        <div class="row">
+        <h1>PROYECTO DAD FINAL</h1>
+        @using (Html.BeginForm("Index", "Home", FormMethod.Post))
+        {
+            <div class="row">
 
 
-            <p class="col-4">
-                Codigo de alumno:
-            </p>
-            @Html.Editor("CODALUM", new { htmlAttributes = new { @class = "form-control col-3", @id = "CODALUM" } })
-            @*<input type="text" id="CODALUM" />*@
+                <p class="col-4">
+                    Codigo de alumno:
+                </p>
+                @Html.Editor("CODALUM", new { htmlAttributes = new { @class = "form-control col-3", @id = "CODALUM" } })
+                @*<input type="text" id="CODALUM" />*@
 
-        </div>
+            </div>
+            <br />
+            <div class="row d-flex justify-content-around">
+                <button class="btn btn-primary">BUSCAR</button>
+                <br />
+                <a href="@Url.Action("ActualizarBaseDatos","Home")" class="btn  btn-primary">Actualizar</a>
+
+            </div>
+
+        }
         <br />
-        <button class="btn btn-primary">BUSCAR</button>
+        <table class="table table-bordered" id="table">
+            <thead class="thead-dark">
+                <tr>
+                    <th>
+                        Codigo Alumno
 
-    }
-    <br />
-    <table class="table table-bordered" id="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>
-                    Codigo Alumno
+                    </th>
+                    <th>
+                        Correo Alumno
 
-                </th>
-                <th>
-                    Correo Alumno
+                    </th>
+                    <th>
+                        Sexo
 
-                </th>
-                <th>
-                    Sexo
+                    </th>
+                    <th>
+                        Fecha de Registro
 
-                </th>
-                <th>
-                    Fecha de Registro
+                    </th>
+                    <th>
+                        Nombre de escuela
 
-                </th>
-                <th>
-                    Nombre de escuela
+                    </th>
+                    <th>
+                        Ciclo de alumno
 
-                </th>
-                <th>
-                    Ciclo de alumno
+                    </th>
+                    <th>
+                        Actualmente trabajando
+                    </th>
+                    @*<th></th>*@
 
-                </th>
-                <th>
-                    Actualmente trabajando
-                </th>
-                @*<th></th>*@
-
-            </tr>
-        </thead>
-        <tbody>
-            @if (Model == null)
-            {
-
-            }
-            else
-            {
-                foreach (var item in Model)
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model == null)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CODALUMNO)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CORREOALUMNO)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.SEXO)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.FECHAREGISTRO)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.NOMBREESCUELA)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CICLOALUMNO)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TRABAJO)
-                        </td>
-                        @*<td>
+
+                }
+                else
+                {
+                    foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CODALUMNO)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CORREOALUMNO)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SEXO)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FECHAREGISTRO)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.NOMBREESCUELA)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.CICLOALUMNO)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.TRABAJO)
+                            </td>
+                            @*<td>
 
                                 @Html.ActionLink("Details", "Details", new { id=item.CODALUMNO }) |
 
                             </td>*@
-                    </tr>
+                        </tr>
+                    }
                 }
-            }
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 
-    <div class="row d-flex justify-content-end">
-            <a href="#" class="btn btn-primary">Actualizar Base de Datos</a>
-            @*<a href="#" class="btn btn-primary">Dimensión empatia</a>
+        @*<div class="row d-flex justify-content-end">
+                <a href="#" class="btn btn-primary">Actualizar Base de Datos</a>
+                <a href="#" class="btn btn-primary">Dimensión empatia</a>
 
-            <a href="#" class="btn btn-primary">Dimensión capacidad de respuesta</a>
+                <a href="#" class="btn btn-primary">Dimensión capacidad de respuesta</a>
 
-            <a href="#" class="btn btn-primary">Dimensión confiabilidad</a>
+                <a href="#" class="btn btn-primary">Dimensión confiabilidad</a>
 
-            <a href="#" class="btn btn-primary">Dimensión cortesia</a>
+                <a href="#" class="btn btn-primary">Dimensión cortesia</a>
 
-            <a href="#" class="btn btn-primary">Filtro por sexo</a>
+                <a href="#" class="btn btn-primary">Filtro por sexo</a>
 
-            <a href="#" class="btn btn-primary">Filtro por año de ingreso</a>*@
+                <a href="#" class="btn btn-primary">Filtro por año de ingreso</a>
 
+
+        </div>*@
+        <br />
+        <br />
+        <iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=73b83aa8-5ea0-4f3a-bf41-36c3d7469c62&autoAuth=true&ctid=717b9a79-1b91-41ab-a6f7-a579b46a9b41&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
 
     </div>
-<br />
-<br />
-</div>
 
-<iframe width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=73b83aa8-5ea0-4f3a-bf41-36c3d7469c62&autoAuth=true&ctid=717b9a79-1b91-41ab-a6f7-a579b46a9b41&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D" frameborder="0" allowFullScreen="true"></iframe>
 
 @section scripts{
     <script>
