--- a/DAD.Web/Views/Shared/_Layout.cshtml
+++ b/DAD.Web/Views/Shared/_Layout.cshtml
@@ -9,8 +9,11 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-
-    <div class="container body-content">
+   
+    <div class="">
+        <nav class="navbar navbar-dark bg-dark">
+           
+        </nav>
         <br />
         @RenderBody()
         <hr />
