Bandeja de dimension y respyuesta

--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
     <div class="container">
 
-        <h1>PROYECTO DAD FINAL</h1>
+        <h1>SRVQUAL CALIDAD DE SERVICIO DE LA FISI: </h1>
         @using (Html.BeginForm("Index", "Home", FormMethod.Post))
         {
             <div class="row">
