--- a/DAD.Web/Views/Home/Index.cshtml
+++ b/DAD.Web/Views/Home/Index.cshtml
@@ -8,12 +8,13 @@
     <div class="container">
 
         <h1>SRVQUAL CALIDAD DE SERVICIO DE LA FISI - ALUMNO: </h1>
+        <br />
         @using (Html.BeginForm("Index", "Home", FormMethod.Post))
         {
-            <div class="row">
+            <div class="row col-12">
 
 
-                <p class="col-4">
+                <p class="col-2">
                     Codigo de alumno:
                 </p>
                 @Html.Editor("CODALUM", new { htmlAttributes = new { @class = "form-control col-3", @id = "CODALUM" } })
@@ -21,10 +22,10 @@
 
             </div>
             <br />
-            <div class="row d-flex justify-content-around">
-                <button class="btn btn-primary">BUSCAR</button>
-                <br />
-                <a href="@Url.Action("ActualizarBaseDatos","Home")" class="btn  btn-primary">Actualizar</a>
+            <div class="row d-flex justify-content-end">
+                <button class="btn btn-primary mr-2">BUSCAR</button>
+
+                <a href="@Url.Action("ActualizarBaseDatos","Home")" class="btn  btn-primary">ACTUALIZAR BD API EXCEL</a>
 
             </div>
 
