--- a/DAD.Web/Views/Home/Respuesta.cshtml
+++ b/DAD.Web/Views/Home/Respuesta.cshtml
@@ -10,10 +10,10 @@
         <h1>SRVQUAL CALIDAD DE SERVICIO DE LA FISI - RESPUESTA: </h1>
         @using (Html.BeginForm("Respuesta", "Home", FormMethod.Post))
         {
-            <div class="row-12">
+            <div class="row col-12">
 
 
-                <p class="col-4">
+                <p class="col-2">
                     Codigo de alumno:
                 </p>
                 @Html.Editor("CODALUM", new { htmlAttributes = new { @class = "form-control col-3", @id = "CODALUM" } })
@@ -21,13 +21,15 @@
 
             </div>
             <div class="row col-12">
-                <p class="col-4">Dimensión:</p>
+                <p class="col-2">Dimensión:</p>
                 @Html.DropDownList("dimensiones", new SelectList(ViewBag.ListaDimension, "CODDIMENSION", "NOMBREDIMENSION"), new { @class = "form-control col-3", @id = "dimensiones" })
             </div>
             <br />
-            <div class="row d-flex justify-content-around">
-                <button class="btn btn-primary">BUSCAR</button>
-                <br />
+            <div class="row d-flex justify-content-end">
+
+                <button class="btn btn-primary mr-2">BUSCAR</button>
+                <div></div>
+                
                 <a href="@Url.Action("ActualizarBaseDatos","Home")" class="btn  btn-primary">Actualizar</a>
 
             </div>
